Simplify Stream API